STtoScript/gen/STParser.cpp

// Generated from C:/Users/nakam/Desktop/parsetest/STtoScript/STtoScript\ST.g4 by ANTLR 4.7.2


#include "STListener.h"
#include "STVisitor.h"

#include "STParser.h"


using namespace antlrcpp;
using namespace antlr4;

STParser::STParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

STParser::~STParser() {
  delete _interpreter;
}

std::string STParser::getGrammarFileName() const {
  return "ST.g4";
}

const std::vector<std::string>& STParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& STParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InputContext ------------------------------------------------------------------

STParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::Stmt_listContext* STParser::InputContext::stmt_list() {
  return getRuleContext<STParser::Stmt_listContext>(0);
}

tree::TerminalNode* STParser::InputContext::EOF() {
  return getToken(STParser::EOF, 0);
}


size_t STParser::InputContext::getRuleIndex() const {
  return STParser::RuleInput;
}

void STParser::InputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInput(this);
}

void STParser::InputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInput(this);
}


antlrcpp::Any STParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

STParser::InputContext* STParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 0, STParser::RuleInput);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    stmt_list();
    setState(69);
    match(STParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stmt_listContext ------------------------------------------------------------------

STParser::Stmt_listContext::Stmt_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<STParser::StatementContext *> STParser::Stmt_listContext::statement() {
  return getRuleContexts<STParser::StatementContext>();
}

STParser::StatementContext* STParser::Stmt_listContext::statement(size_t i) {
  return getRuleContext<STParser::StatementContext>(i);
}


size_t STParser::Stmt_listContext::getRuleIndex() const {
  return STParser::RuleStmt_list;
}

void STParser::Stmt_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_list(this);
}

void STParser::Stmt_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_list(this);
}


antlrcpp::Any STParser::Stmt_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_list(this);
  else
    return visitor->visitChildren(this);
}

STParser::Stmt_listContext* STParser::stmt_list() {
  Stmt_listContext *_localctx = _tracker.createInstance<Stmt_listContext>(_ctx, getState());
  enterRule(_localctx, 2, STParser::RuleStmt_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(74);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        statement(); 
      }
      setState(76);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

STParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t STParser::StatementContext::getRuleIndex() const {
  return STParser::RuleStatement;
}

void STParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- St_commentContext ------------------------------------------------------------------

STParser::CommentContext* STParser::St_commentContext::comment() {
  return getRuleContext<STParser::CommentContext>(0);
}

STParser::St_commentContext::St_commentContext(StatementContext *ctx) { copyFrom(ctx); }

void STParser::St_commentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSt_comment(this);
}
void STParser::St_commentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSt_comment(this);
}

antlrcpp::Any STParser::St_commentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitSt_comment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StmtContext ------------------------------------------------------------------

tree::TerminalNode* STParser::StmtContext::SEMI_COLON() {
  return getToken(STParser::SEMI_COLON, 0);
}

STParser::Single_stmtContext* STParser::StmtContext::single_stmt() {
  return getRuleContext<STParser::Single_stmtContext>(0);
}

STParser::StmtContext::StmtContext(StatementContext *ctx) { copyFrom(ctx); }

void STParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}
void STParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}

antlrcpp::Any STParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}
STParser::StatementContext* STParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, STParser::RuleStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(82);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STParser::SINGLE_LINE_COMMENT:
      case STParser::MULTI_LINE_COMMENT_A: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<STParser::St_commentContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(77);
        comment();
        break;
      }

      case STParser::SEMI_COLON:
      case STParser::CASE:
      case STParser::REPEAT:
      case STParser::EXIT:
      case STParser::RETURN:
      case STParser::IDENTIFIER: {
        _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<STParser::StmtContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(79);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << STParser::CASE)
          | (1ULL << STParser::REPEAT)
          | (1ULL << STParser::EXIT)
          | (1ULL << STParser::RETURN)
          | (1ULL << STParser::IDENTIFIER))) != 0)) {
          setState(78);
          single_stmt();
        }
        setState(81);
        match(STParser::SEMI_COLON);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

STParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t STParser::CommentContext::getRuleIndex() const {
  return STParser::RuleComment;
}

void STParser::CommentContext::copyFrom(CommentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Line_commentContext ------------------------------------------------------------------

tree::TerminalNode* STParser::Line_commentContext::SINGLE_LINE_COMMENT() {
  return getToken(STParser::SINGLE_LINE_COMMENT, 0);
}

STParser::Line_commentContext::Line_commentContext(CommentContext *ctx) { copyFrom(ctx); }

void STParser::Line_commentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine_comment(this);
}
void STParser::Line_commentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine_comment(this);
}

antlrcpp::Any STParser::Line_commentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitLine_comment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Multi_commentContext ------------------------------------------------------------------

tree::TerminalNode* STParser::Multi_commentContext::MULTI_LINE_COMMENT_A() {
  return getToken(STParser::MULTI_LINE_COMMENT_A, 0);
}

STParser::Multi_commentContext::Multi_commentContext(CommentContext *ctx) { copyFrom(ctx); }

void STParser::Multi_commentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulti_comment(this);
}
void STParser::Multi_commentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulti_comment(this);
}

antlrcpp::Any STParser::Multi_commentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitMulti_comment(this);
  else
    return visitor->visitChildren(this);
}
STParser::CommentContext* STParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 6, STParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STParser::SINGLE_LINE_COMMENT: {
        _localctx = dynamic_cast<CommentContext *>(_tracker.createInstance<STParser::Line_commentContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(84);
        match(STParser::SINGLE_LINE_COMMENT);
        break;
      }

      case STParser::MULTI_LINE_COMMENT_A: {
        _localctx = dynamic_cast<CommentContext *>(_tracker.createInstance<STParser::Multi_commentContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(85);
        match(STParser::MULTI_LINE_COMMENT_A);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Single_stmtContext ------------------------------------------------------------------

STParser::Single_stmtContext::Single_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t STParser::Single_stmtContext::getRuleIndex() const {
  return STParser::RuleSingle_stmt;
}

void STParser::Single_stmtContext::copyFrom(Single_stmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Stmt_funcContext ------------------------------------------------------------------

STParser::FunctionContext* STParser::Stmt_funcContext::function() {
  return getRuleContext<STParser::FunctionContext>(0);
}

STParser::Stmt_funcContext::Stmt_funcContext(Single_stmtContext *ctx) { copyFrom(ctx); }

void STParser::Stmt_funcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_func(this);
}
void STParser::Stmt_funcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_func(this);
}

antlrcpp::Any STParser::Stmt_funcContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_func(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Stmt_assignContext ------------------------------------------------------------------

STParser::AssignContext* STParser::Stmt_assignContext::assign() {
  return getRuleContext<STParser::AssignContext>(0);
}

STParser::Stmt_assignContext::Stmt_assignContext(Single_stmtContext *ctx) { copyFrom(ctx); }

void STParser::Stmt_assignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_assign(this);
}
void STParser::Stmt_assignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_assign(this);
}

antlrcpp::Any STParser::Stmt_assignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_assign(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Stmt_repeatContext ------------------------------------------------------------------

STParser::RepeatContext* STParser::Stmt_repeatContext::repeat() {
  return getRuleContext<STParser::RepeatContext>(0);
}

STParser::Stmt_repeatContext::Stmt_repeatContext(Single_stmtContext *ctx) { copyFrom(ctx); }

void STParser::Stmt_repeatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_repeat(this);
}
void STParser::Stmt_repeatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_repeat(this);
}

antlrcpp::Any STParser::Stmt_repeatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_repeat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Stmt_returnContext ------------------------------------------------------------------

STParser::S_returnContext* STParser::Stmt_returnContext::s_return() {
  return getRuleContext<STParser::S_returnContext>(0);
}

STParser::Stmt_returnContext::Stmt_returnContext(Single_stmtContext *ctx) { copyFrom(ctx); }

void STParser::Stmt_returnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_return(this);
}
void STParser::Stmt_returnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_return(this);
}

antlrcpp::Any STParser::Stmt_returnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_return(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Stmt_exitContext ------------------------------------------------------------------

STParser::ExitContext* STParser::Stmt_exitContext::exit() {
  return getRuleContext<STParser::ExitContext>(0);
}

STParser::Stmt_exitContext::Stmt_exitContext(Single_stmtContext *ctx) { copyFrom(ctx); }

void STParser::Stmt_exitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_exit(this);
}
void STParser::Stmt_exitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_exit(this);
}

antlrcpp::Any STParser::Stmt_exitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_exit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Stmt_caseContext ------------------------------------------------------------------

STParser::S_caseContext* STParser::Stmt_caseContext::s_case() {
  return getRuleContext<STParser::S_caseContext>(0);
}

STParser::Stmt_caseContext::Stmt_caseContext(Single_stmtContext *ctx) { copyFrom(ctx); }

void STParser::Stmt_caseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_case(this);
}
void STParser::Stmt_caseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_case(this);
}

antlrcpp::Any STParser::Stmt_caseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStmt_case(this);
  else
    return visitor->visitChildren(this);
}
STParser::Single_stmtContext* STParser::single_stmt() {
  Single_stmtContext *_localctx = _tracker.createInstance<Single_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, STParser::RuleSingle_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(94);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<Single_stmtContext *>(_tracker.createInstance<STParser::Stmt_assignContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(88);
      assign();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<Single_stmtContext *>(_tracker.createInstance<STParser::Stmt_funcContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(89);
      function();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<Single_stmtContext *>(_tracker.createInstance<STParser::Stmt_repeatContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(90);
      repeat();
      break;
    }

    case 4: {
      _localctx = dynamic_cast<Single_stmtContext *>(_tracker.createInstance<STParser::Stmt_exitContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(91);
      exit();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<Single_stmtContext *>(_tracker.createInstance<STParser::Stmt_caseContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(92);
      s_case();
      break;
    }

    case 6: {
      _localctx = dynamic_cast<Single_stmtContext *>(_tracker.createInstance<STParser::Stmt_returnContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(93);
      s_return();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_returnContext ------------------------------------------------------------------

STParser::S_returnContext::S_returnContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STParser::S_returnContext::RETURN() {
  return getToken(STParser::RETURN, 0);
}


size_t STParser::S_returnContext::getRuleIndex() const {
  return STParser::RuleS_return;
}

void STParser::S_returnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_return(this);
}

void STParser::S_returnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_return(this);
}


antlrcpp::Any STParser::S_returnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitS_return(this);
  else
    return visitor->visitChildren(this);
}

STParser::S_returnContext* STParser::s_return() {
  S_returnContext *_localctx = _tracker.createInstance<S_returnContext>(_ctx, getState());
  enterRule(_localctx, 10, STParser::RuleS_return);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(STParser::RETURN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_caseContext ------------------------------------------------------------------

STParser::S_caseContext::S_caseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STParser::S_caseContext::CASE() {
  return getToken(STParser::CASE, 0);
}

STParser::ExprContext* STParser::S_caseContext::expr() {
  return getRuleContext<STParser::ExprContext>(0);
}

tree::TerminalNode* STParser::S_caseContext::OF() {
  return getToken(STParser::OF, 0);
}

tree::TerminalNode* STParser::S_caseContext::END_CASE() {
  return getToken(STParser::END_CASE, 0);
}

tree::TerminalNode* STParser::S_caseContext::ELSE() {
  return getToken(STParser::ELSE, 0);
}

std::vector<STParser::Case_selectContext *> STParser::S_caseContext::case_select() {
  return getRuleContexts<STParser::Case_selectContext>();
}

STParser::Case_selectContext* STParser::S_caseContext::case_select(size_t i) {
  return getRuleContext<STParser::Case_selectContext>(i);
}

STParser::Stmt_listContext* STParser::S_caseContext::stmt_list() {
  return getRuleContext<STParser::Stmt_listContext>(0);
}


size_t STParser::S_caseContext::getRuleIndex() const {
  return STParser::RuleS_case;
}

void STParser::S_caseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_case(this);
}

void STParser::S_caseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_case(this);
}


antlrcpp::Any STParser::S_caseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitS_case(this);
  else
    return visitor->visitChildren(this);
}

STParser::S_caseContext* STParser::s_case() {
  S_caseContext *_localctx = _tracker.createInstance<S_caseContext>(_ctx, getState());
  enterRule(_localctx, 12, STParser::RuleS_case);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(STParser::CASE);
    setState(99);
    expr(0);
    setState(100);
    match(STParser::OF);
    setState(102); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(101);
      dynamic_cast<S_caseContext *>(_localctx)->cases = case_select();
      setState(104); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STParser::EXPLICIT_INT)
      | (1ULL << STParser::EXPLICIT_UINT)
      | (1ULL << STParser::EXPLICIT_DINT)
      | (1ULL << STParser::EXPLICIT_UDINT)
      | (1ULL << STParser::EXPLICIT_REAL)
      | (1ULL << STParser::EXPLICIT_LREAL)
      | (1ULL << STParser::EXPLICIT_STRING)
      | (1ULL << STParser::IDENTIFIER)
      | (1ULL << STParser::BINARY_NOTATION)
      | (1ULL << STParser::OCTAL_NOTATION)
      | (1ULL << STParser::HEXA_NOTATION)
      | (1ULL << STParser::DEC_NOTATION)
      | (1ULL << STParser::REAL_NUM)
      | (1ULL << STParser::MBCS)
      | (1ULL << STParser::WSTR))) != 0));
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == STParser::ELSE) {
      setState(106);
      match(STParser::ELSE);
      setState(107);
      dynamic_cast<S_caseContext *>(_localctx)->else_stmt = stmt_list();
    }
    setState(110);
    match(STParser::END_CASE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Case_selectContext ------------------------------------------------------------------

STParser::Case_selectContext::Case_selectContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::Case_listContext* STParser::Case_selectContext::case_list() {
  return getRuleContext<STParser::Case_listContext>(0);
}
